--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>serenity-rest-assured</artifactId>
             <version>${serenity.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
         <!-- To use Bidirectional map-->
         <dependency>
             <groupId>org.apache.commons</groupId>
