--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- To use Bidirectional map-->
         <dependency>
